--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="empty_apiary_message">Apiary name cannot be empty!</string>
     <string name="save_apiary_error_message">Error while saving apiary.</string>
     <string name="successfully_saved_apiary_message">Apiary saved!</string>
+    <string name="more_icon">More...</string>
+    <string name="enter_icon">Enter...</string>
+    <string name="weather_icon">Weather icon</string>
 </resources>
