--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="enter_icon">Enter...</string>
     <string name="weather_icon">Weather icon</string>
     <string name="last_revision_icon">Last revision icon</string>
+    <string name="hives">Hives</string>
 </resources>
