--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,9 +14,13 @@
     <string name="name_hint">Name</string>
     <string name="notes_hint">Notes...</string>
     <string name="edit_apiary">Edit apiary</string>
+    <string name="edit_hive">Edit hive</string>
     <string name="add_apiary">Add apiary</string>
+    <string name="add_hive">Add hive</string>
     <string name="empty_apiary_message">Apiary name cannot be empty!</string>
+    <string name="empty_hive_message">Hive name cannot be empty!</string>
     <string name="save_apiary_error_message">Error while saving apiary.</string>
+    <string name="save_hive_error_message">Error while saving hive.</string>
     <string name="successfully_saved_apiary_message">Apiary saved!</string>
     <string name="successfully_saved_hive_message">Hive saved!</string>
     <string name="more_icon">More...</string>
