--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,10 @@
 
     <!-- App name [CHAR LIMIT=NONE] -->
     <string name="app_name" translatable="false">GoBees</string>
+    <!-- GoBees logo [CHAR LIMIT=NONE] -->
+    <string name="gobees_logo">GoBees logo</string>
+    <!-- Refresh menu option [CHAR LIMIT=25] -->
+    <string name="refresh">Refresh</string>
 
     <!--+++++++++++++++-->
     <!-- General Icons -->
@@ -17,42 +21,22 @@
     <string name="enter_icon">Enter…</string>
     <!-- Description of date icon ic_event [CHAR LIMIT=25] -->
     <string name="date_icon">Date</string>
+    <!-- Description of weather icon [CHAR LIMIT=25] -->
+    <string name="weather_icon">Weather icon</string>
 
     <!--+++++++++++++++-->
     <!-- drawerLayout  -->
     <!--+++++++++++++++-->
 
-    <string name="gobees_logo">GoBees logo</string>
-    <string name="statistics_title">Statistics</string>
+    <!-- Settings [CHAR LIMIT=30] -->
     <string name="settings_title">Settings</string>
-
-
-    <string name="add_icon">Add</string>
-    <string name="home_icon">Home icon</string>
-    <string name="refresh">Refresh</string>
-    <string name="no_apiaries_add">Add a new apiary +</string>
-
-
-    <string name="name_hint">Name</string>
-    <string name="notes_hint">Notes…</string>
-    <string name="edit_apiary">Edit apiary</string>
-    <string name="edit_hive">Edit hive</string>
-    <string name="add_apiary">Add apiary</string>
-    <string name="add_hive">Add hive</string>
-    <string name="empty_apiary_message">Apiary name cannot be empty!</string>
-    <string name="empty_hive_message">Hive name cannot be empty!</string>
-    <string name="save_apiary_error_message">Error while saving apiary.</string>
-    <string name="save_hive_error_message">Error while saving hive.</string>
-
-
-    <string name="weather_icon">Weather icon</string>
-
-    <string name="hives">Hives</string>
 
     <!--++++++++++-->
     <!-- Apiaries -->
     <!--++++++++++-->
 
+    <!-- Description of number of hives icon[CHAR LIMIT=100] -->
+    <string name="num_hives">Number of hives</string>
     <!-- Error msg shown when it's not posible to load apiaries [CHAR LIMIT=100] -->
     <string name="loading_apiaries_error">Error while loading apiaries.</string>
     <!-- Error msg shown when there's no apiaries [CHAR LIMIT=100] -->
@@ -60,6 +44,22 @@
     <!-- Msg shown when an apiary is saved [CHAR LIMIT=100] -->
     <string name="successfully_saved_apiary_message">Apiary saved!</string>
 
+    <!--++++++++++++-->
+    <!-- Add apiary -->
+    <!--++++++++++++-->
+
+    <!-- Edit apiary action bar title [CHAR LIMIT=50] -->
+    <string name="edit_apiary">Edit apiary</string>
+    <!-- Add apiary action bar title [CHAR LIMIT=50] -->
+    <string name="add_apiary">Add apiary</string>
+    <!-- Apiary name input [CHAR LIMIT=50] -->
+    <string name="apiary_name_hint">Name</string>
+    <!-- Apiary notes input [CHAR LIMIT=50] -->
+    <string name="apiary_notes_hint">Notes…</string>
+    <!-- Error msg shown when name is empty [CHAR LIMIT=100] -->
+    <string name="empty_apiary_message">Apiary name cannot be empty!</string>
+    <!-- Error msg shown when it's not possible to save the apiary [CHAR LIMIT=100] -->
+    <string name="save_apiary_error_message">Error while saving apiary.</string>
 
     <!--++++++++-->
     <!-- Apiary -->
@@ -69,7 +69,7 @@
     <string name="apiary_hives_tab">Hives</string>
     <!-- Apiary info tab name [CHAR LIMIT=30] -->
     <string name="apiary_info_tab">Info</string>
-    <!-- Error msg shown when it's not posible to load hives [CHAR LIMIT=100] -->
+    <!-- Error msg shown when it's not possible to load hives [CHAR LIMIT=100] -->
     <string name="loading_hives_error">Error while loading hives.</string>
     <!-- Error msg shown when there's no hives [CHAR LIMIT=100] -->
     <string name="no_hives">You have no hives!</string>
@@ -77,6 +77,25 @@
     <string name="successfully_saved_hive_message">Hive saved!</string>
     <!-- Description of last revision icon ic_cached [CHAR LIMIT=100] -->
     <string name="last_revision_icon">Last revision icon</string>
+    <!-- Description of hive logo [CHAR LIMIT=100] -->
+    <string name="hive_logo">Hive logo</string>
+
+    <!--++++++++++-->
+    <!-- Add hive -->
+    <!--++++++++++-->
+
+    <!-- Edit hive action bar title [CHAR LIMIT=50] -->
+    <string name="edit_hive">Edit hive</string>
+    <!-- Add hive action bar title [CHAR LIMIT=50] -->
+    <string name="add_hive">Add hive</string>
+    <!-- Hive name input [CHAR LIMIT=50] -->
+    <string name="hive_name_hint">Name</string>
+    <!-- Hive notes input [CHAR LIMIT=50] -->
+    <string name="hive_notes_hint">Notes…</string>
+    <!-- Error msg shown when name is empty [CHAR LIMIT=100] -->
+    <string name="empty_hive_message">Hive name cannot be empty!</string>
+    <!-- Error msg shown when it's not possible to save the hive [CHAR LIMIT=100] -->
+    <string name="save_hive_error_message">Error while saving hive.</string>
 
     <!--++++++-->
     <!-- Hive -->
@@ -86,7 +105,7 @@
     <string name="hive_recordings_tab">Recordings</string>
     <!-- Hive info tab name [CHAR LIMIT=20] -->
     <string name="hive_info_tab">Info</string>
-    <!-- Error msg shown when it's not posible to load recordings [CHAR LIMIT=100] -->
+    <!-- Error msg shown when it's not possible to load recordings [CHAR LIMIT=100] -->
     <string name="loading_recordings_error">Error while loading hives.</string>
     <!-- Error msg shown when there's no recordings [CHAR LIMIT=100] -->
     <string name="no_recordings">You have no recordings!</string>
@@ -102,9 +121,9 @@
 
     <!-- Toolbar title in settings [CHAR LIMIT=30] -->
     <string name="settings_toolbar_title">Settings</string>
-    <!-- Label for weather cathergory [CHAR LIMIT=30] -->
+    <!-- Label for weather category [CHAR LIMIT=30] -->
     <string name="pref_weather_cat_label">Weather</string>
-    <!-- Key name for weather cathergory in SharedPreferences [CHAR LIMIT=NONE] -->
+    <!-- Key name for weather category in SharedPreferences [CHAR LIMIT=NONE] -->
     <string name="pref_weather_cat_key">weather</string>
     <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
     <string name="pref_temp_units_label">Temperature Units</string>
