Add location chooser #83

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,8 +66,12 @@
     <string name="apiary_location_hint">Location</string>
     <!-- Apiary notes input [CHAR LIMIT=50] -->
     <string name="apiary_notes_hint">Notes…</string>
+    <!-- Msg shown when we're searching for gps [CHAR LIMIT=100] -->
+    <string name="searching_gps_message">Searching for GPS…</string>
     <!-- Error msg shown when name is empty [CHAR LIMIT=100] -->
     <string name="empty_apiary_message">Apiary name cannot be empty!</string>
+    <!-- Error msg shown when we cannot connect to GPS [CHAR LIMIT=100] -->
+    <string name="gps_error_message">Unable to connect to GPS!</string>
     <!-- Error msg shown when it's not possible to save the apiary [CHAR LIMIT=100] -->
     <string name="save_apiary_error_message">Error while saving apiary.</string>
     <!-- Description of apiary logo [CHAR LIMIT=100] -->
