Implement monitoring service configuration #88

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -65,7 +65,7 @@
 }
 
 @article{ art:campbell2005,
-    abstract = {A sensor has been developed to monitor objects passing through tunnels using a capacitance bridge. While the sensor concept is easily adaptable to a wide range of objects or organisms which pass through an enclosed area, our version of the sensor was designed specifically for monitoring bumblebee colonies. Other bee sensors have been developed based on optical methods of detection. The capacitance sensor provides all the information of the optical sensors and additional information on the bee size and velocity. The sensor is expected to provide entomologists with more efficient methods of studying the foraging activities of bees.},
+    abstract = {A sensor has been developed to monitor objects passing through tunnels using a capacitance bridge. While the sensor concept is easily adaptable to a wide range of objects or organisms which pass through an enclosed area, our version of the sensor was designed specifically for monitoring bumblebee colonies. Other bee sensors have been developed based on optical methods of detection. The capacitance sensor provides all the information of the optical sensors and additional information on the bee blobSize and velocity. The sensor is expected to provide entomologists with more efficient methods of studying the foraging activities of bees.},
     author = {Campbell, Jennifer M and Dahn, Douglas C and Ryan, Daniel A J},
     doi = {10.1088/0957-0233/16/12/015},
     isbn = {0957-0233},
