--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,21 +160,21 @@
     <!-- Default value for show algorithm output preference [CHAR LIMIT=NONE] -->
     <string name="pref_show_algo_output_default" translatable="false">true</string>
 
-    <!-- Label for the blob size preference [CHAR LIMIT=30] -->
-    <string name="pref_blob_size_label">Blob size</string>
-    <!-- Label for blob size small [CHAR LIMIT=25] -->
+    <!-- Label for the blob blobSize preference [CHAR LIMIT=30] -->
+    <string name="pref_blob_size_label">Blob blobSize</string>
+    <!-- Label for blob blobSize small [CHAR LIMIT=25] -->
     <string name="pref_blob_size_label_small">Small</string>
-    <!-- Label for blob size normal [CHAR LIMIT=25] -->
+    <!-- Label for blob blobSize normal [CHAR LIMIT=25] -->
     <string name="pref_blob_size_label_normal">Normal</string>
-    <!-- Label for blob size big [CHAR LIMIT=25] -->
+    <!-- Label for blob blobSize big [CHAR LIMIT=25] -->
     <string name="pref_blob_size_label_big">Big</string>
-    <!-- Key name for blob size preference in SharedPreferences [CHAR LIMIT=NONE] -->
+    <!-- Key name for blob blobSize preference in SharedPreferences [CHAR LIMIT=NONE] -->
     <string name="pref_blob_size_key" translatable="false">blob_size</string>
-    <!-- Value in SharedPreferences for small blob size [CHAR LIMIT=NONE] -->
+    <!-- Value in SharedPreferences for small blob blobSize [CHAR LIMIT=NONE] -->
     <string name="pref_blob_size_small" translatable="false">small</string>
-    <!-- Value in SharedPreferences for small blob size [CHAR LIMIT=NONE] -->
+    <!-- Value in SharedPreferences for small blob blobSize [CHAR LIMIT=NONE] -->
     <string name="pref_blob_size_normal" translatable="false">normal</string>
-    <!-- Value in SharedPreferences for small blob size [CHAR LIMIT=NONE] -->
+    <!-- Value in SharedPreferences for small blob blobSize [CHAR LIMIT=NONE] -->
     <string name="pref_blob_size_big" translatable="false">big</string>
 
     <!-- Label for the min area preference [CHAR LIMIT=30] -->
